# wallpaper-switcher

./: Cargo.toml  LICENSE  build.sh
src/: config.rs  ipc.rs  lib.rs  main.rs
